--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -2,11 +2,11 @@
 {% block title %}Об авторе проекта{% endblock %}
 {% load static %}
 {% block content %}
-  <style>
-   .fig {
-    text-align: center;
-   }
-  </style>
+{% block extra_styles %}
+    <style>
+      .fig {text-align: center;}
+    </style>
+{% endblock %}
 </body>
 <h1>Привет, я Артур</h1>
   <p>
