--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -10,7 +10,7 @@
   </p>
   {% for post in page_obj %}
   {% include 'includes/posts.html' %}
-    <p>{{ post.text }}</p>
+    <p>{{ post.text|linebreaks }}</p>
   {% if post.group %}
     <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
     {% endif %}
