--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,8 +6,8 @@
   <div class="container py-5">
     {% for post in page_obj %}
     {% include 'includes/posts.html' %}
-      <p>{{ post.text }}</p>
-    {%if post.group %}
+      <p>{{ post.text|linebreaks }}</p>
+    {% if post.group %}
       <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
