--- a/yatube/templates/users/password_change_done.html
+++ b/yatube/templates/users/password_change_done.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-  <head>    
+{% block content %}
     {% include 'includes/head.html' %}
     {% block title %}Пароль изменён{% endblock %}
-  </head>
   <body>	   
     <header>
       {% include 'includes/header.html' %} 
@@ -30,3 +29,4 @@
       {% include 'includes/footer.html' %}   
     </footer>
   </body>
+{% endblock %}
