--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -2,18 +2,13 @@
 {% block title %}Об авторе проекта{% endblock %}
 {% load static %}
 {% block content %}
-{% block extra_styles %}
-    <style>
-      .fig {text-align: center;}
-    </style>
-{% endblock %}
-</body>
-<h1>Привет, я Артур</h1>
+<body>
+<h1>Привет, меня зовут Артур</h1>
   <p>
     Я живу и работаю в городе Сочи. Давно мечтал о новой профессии. Выбор пал на Python разработчика.
     А этой мой кот, по характеру Гарфилд, а зовут его Сеймур.
   </p>
-  <p class="fig"><img src="{% static 'img/semi.png' %}" width="330" height="300" alt="Сеймур"></p>
+  <p class="text-center"><img src="{% static 'img/semi.png' %}" width="330" height="300" alt="Сеймур"></p>
 </body>
 {% endblock %}
 
