--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
-<!DOCTYPE html> <!-- Используется html 5 версии -->
-<html lang="ru"> <!-- Язык сайта - русский -->
+<!DOCTYPE html>
+<html lang="ru">
   <head>
     {% include 'includes/head.html' %}
       <title>{% block title %}{% endblock title %}</title>
