--- a/yatube/templates/users/password_reset_complete.html
+++ b/yatube/templates/users/password_reset_complete.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
-  <head>    
     {% include 'includes/head.html' %}
     {% block title %}Сброс пароля прошёл успешно{% endblock %}
-  </head>
   <body>	   
     <header>
       {% include 'includes/header.html' %}
@@ -19,7 +17,7 @@
               </div>
               <div class="card-body">
                 <p>Ваш пароль был сохранен. Используйте его для входа</p>
-                <a href="../users/login.html">войти</a>
+                <a href="{% url 'users:login'  %}">Войти</a>
               </div> 
             </div> 
           </div>
