--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -4,6 +4,7 @@
 {% endblock title %}
 
 {% block content %}
+  <div class="container py-5">
   <h1>{{ group.title }}</h1>
   <p>
     {{ group.description|linebreaksbr }}
@@ -16,6 +17,6 @@
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
-
+  </div>
   {% include 'posts/includes/paginator.html' %}
 {% endblock content %}
