--- a/yatube/templates/users/password_change_done.html
+++ b/yatube/templates/users/password_change_done.html
@@ -8,7 +8,6 @@
       {% include 'includes/header.html' %} 
     </header>
     <main>
-      {%block content %}
       <div class="container py-5"> 
         <div class="row justify-content-center">
           <div class="col-md-8 p-5">
@@ -18,15 +17,14 @@
               </div>
               <div class="card-body"> 
                 <p>Пароль изменён успешно</p>
-              </div> <!-- card body -->
-            </div> <!-- card -->
-          </div> <!-- col -->
-        </div> <!-- row -->
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      {% endblock content %}
     </main>
 	  <footer>
       {% include 'includes/footer.html' %}   
-    </footer>
+      </footer>
   </body>
 {% endblock %}
