--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -2,17 +2,15 @@
 {% block title %}Новый пароль{% endblock %}
 {% block content %}
 {% load user_filters %}
-
 {% if validlink %}
   <body>
-    <main>
-      <div class="container py-5"> 
-        <div class="row justify-content-center">
-          <div class="col-md-8 p-5">
-            <div class="card">
-              <div class="card-header">
-                Введите новый пароль
-              </div>
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 p-5">
+          <div class="card">
+            <div class="card-header">
+              Введите новый пароль
+            </div>
               <div class="card-body">
                 <form method="post" action="{% url "users:password_reset_confirm" %}">{% csrf_token %}
                   <div class="form-group row my-3 p-3">
@@ -22,7 +20,12 @@
                     </label>    
                     <input type="password" name="new_password1" class="form-control" required id="id_new_password1">      
                     <small id="id_new_password1-help" class="form-text text-muted">
-                      <ul><li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</li><li>Ваш пароль должен содержать как минимум 8 символов.</li><li>Ваш пароль не может быть одним из широко распространённых паролей.</li><li>Ваш пароль не может состоять только из цифр.</li></ul>
+                      <ul>
+                        <li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</li>
+                        <li>Ваш пароль должен содержать как минимум 8 символов.</li>
+                        <li>Ваш пароль не может быть одним из широко распространённых паролей.</li>
+                        <li>Ваш пароль не может состоять только из цифр.</li>
+                      </ul>
                     </small>      
                   </div>
                   <div class="form-group row my-3 p-3">
@@ -38,20 +41,21 @@
                     </button>
                   </div>
                 </form>
-              </div> <!-- card body -->
-            </div> <!-- card -->
-          </div> <!-- col -->
-        </div> <!-- row -->
-        <!-- если использована неправильная ссылка -->
+              </div>
+            </div>
+          </div>
+        </div>
         {% else %}
-<div class="row justify-content-center">
-  <div class="col-md-8 p-5">
-    <div class="card">
-      <div class="card-header">Ошибка</div>
-      <div class="card-body">
-        <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
-      </div> <!-- card body -->
-    </div> <!-- card -->
-  </div> <!-- col -->
-</div> <!-- row -->
-{% endif %}
+        <div class="row justify-content-center">
+          <div class="col-md-8 p-5">
+            <div class="card">
+              <div class="card-header">Ошибка</div>
+               <div class="card-body">
+                <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
+               </div>
+            </div>
+          </div>
+        </div>
+        {% endif %}
+      </div>
+{% endblock content %}
