--- a/yatube/templates/users/signup.html
+++ b/yatube/templates/users/signup.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% block title %}Войти{% endblock %}
+
 {% block content %}
 {% load user_filters %}
   <div class="row justify-content-center">
@@ -27,18 +29,15 @@
           <form method="post"
             {% if action_url %}
               action="{% url action_url %}"
-            {% endif %}
-          >
+            {% endif %}>
           {% csrf_token %}
-
           {% for field in form %}
             <div class="form-group row my-3"
               {% if field.field.required %}
                 aria-required="true"
               {% else %}
                 aria-required="false"
-              {% endif %}
-            >
+              {% endif %}>
               <label for="{{ field.id_for_label }}">
                 {{ field.label }}
                   {% if field.field.required %}
