--- a/yatube/templates/users/logged_out.html
+++ b/yatube/templates/users/logged_out.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Вы вышли из системы{% endblock %}
 {% block content %}
+
 <div class="row justify-content-center">
   <div class="col-md-8 p-5">
     <div class="card">
@@ -11,8 +12,9 @@
         <p>
           Вы вышли из своей учётной записи. Ждём вас снова!
         </p>
-      </div> <!-- card body -->
-    </div> <!-- card -->
-  </div> <!-- col -->
-</div> <!-- row -->
-{% endblock %} 
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
