--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -1,44 +1,52 @@
 {% extends "base.html" %}
-{% load static %}
-{% load user_filters %}
-{% include 'includes/head.html' %}
 {% block title %}Сброс пароля{% endblock %}
 {% block content %}
-  <body>	   
-    <header>
-      {% include 'includes/header.html' %} 
-    </header>
-    <main>
-      <div class="container py-5"> 
-        <div class="row justify-content-center">
-          <div class="col-md-8 p-5">
-            <div class="card">
-              <div class="card-header">
-                Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались
-              </div>
-              <div class="card-body"> 
-                <form method="post" action="{% url "users:password_reset_form" %}">{% csrf_token %}
-                  <div class="form-group row my-3 p-3">
-                    <label for="id_email">
-                      Адрес электронной почты
-                      <span class="required text-danger">*</span>
-                    </label>    
-                    <input type="email" name="email" maxlength="254" class="form-control" required id="id_email">
-                  </div>
-                  <div class="col-md-6 offset-md-4">
-                    <button type="submit" class="btn btn-primary">
-                      Сбросить пароль
-                    </button>
-                  </div>
+{% load user_filters %}
+
+<div class="row justify-content-center">
+    <div class="col-md-8 p-5">
+        <div class="card">
+            <div class="card-header">Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались</div>
+            <div class="card-body">
+
+                <form method="post">
+                  {% csrf_token %}
+
+                  {% for field in form %}
+                    <div class="form-group row my-3"
+                      {% if field.field.required %}
+                        aria-required="true"
+                      {% else %}
+                        aria-required="false"
+                      {% endif %}>
+                        <label for="{{ field.id_for_label }}">
+                        {{ field.label }}
+                          {% if field.field.required %}
+                            <span class="required text-danger">*</span>
+                      {% endif %}
+                        </label>
+
+                        {{ field|addclass:'form-control' }}
+
+                        {% if field.help_text %}
+                            <small id="{{ field.id_for_label }}-help"
+                                    class="form-text text-muted">
+                                {{ field.help_text|safe }}
+                            </small>
+                        {% endif %}
+                    </div>
+                  {% endfor %}
+
+                    <div class="col-md-6 offset-md-4">
+                      <button type="submit" class="btn btn-primary">
+                        Сбросить пароль
+                      </button>
+                    </div>
                 </form>
-              </div>
-            </div>
-          </div>
-        </div>  
-      </div>
-    </main>
-	<footer>
-      {% include 'includes/footer.html' %}
-    </footer>
-  </body>
-{% endblock content %}
+
+            </div> <!-- card body -->
+        </div> <!-- card -->
+    </div> <!-- col -->
+</div> <!-- row -->
+
+{% endblock %}
