--- a/yatube/templates/users/password_change_form.html
+++ b/yatube/templates/users/password_change_form.html
@@ -13,31 +13,32 @@
             {% csrf_token %}
 
             {% for field in form %}
-               <div class="form-group row my-3"
-                 {% if field.field.required %}
-                   aria-required="true"
-                 {% else %}
-                   aria-required="false"
-                 {% endif %}>
-                    <label for="{{ field.id_for_label }}">
-                    {{ field.label }}
-                 {% if field.field.required %}
-                   <span class="required text-danger">*</span>
-                 {% endif %}
-                    </label>
-
-                    {{ field|addclass:'form-control' }}
-
-                    {% if field.help_text %}
-                    <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
+              <div class="form-group row my-3"
+                {% if field.field.required %}
+                  aria-required="true"
+                {% else %}
+                  aria-required="false"
+                {% endif %}>
+                  <label for="{{ field.id_for_label }}">
+                  {{ field.label }}
+                    {% if field.field.required %}
+                      <span class="required text-danger">*</span>
                     {% endif %}
-                </div>
-                {% endfor %}
+                  </label>
+                  <div>
 
-                <div class="col-md-6 offset-md-4">
-                  <button type="submit" class="btn btn-primary">
-                    Изменить пароль
-                  </button>
+                  {{ field|addclass:'form-control' }}
+
+                  {% if field.help_text %}
+                    <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
+                      {% endif %}
+                  </div>
+               </div>
+            {% endfor %}
+            <div class="col-md-6 offset-md-4">
+              <button type="submit" class="btn btn-primary">
+                Изменить пароль
+              </button>
         </form>
       </div>
     </div>
